test fix overflow mobile page offer and contact

--- a/css/main.css
+++ b/css/main.css
@@ -388,24 +388,18 @@ a {
   height: 100vh;
   max-height: 100%; }
 
-.body-contact {
-  overflow: hidden; }
-  @media (max-width: 1000px) {
-    .body-contact {
-      overflow-x: visible;
-      overflow-y: hidden; } }
-
-.body-offer {
-  overflow: hidden; }
-  @media (max-width: 1000px) {
-    .body-offer {
-      overflow-x: visible;
-      overflow-y: hidden; } }
-
 .body-index {
   overflow: hidden; }
   @media (max-width: 1000px) {
     .body-index {
       position: fixed; } }
+
+.body-offer {
+  overflow-y: visible;
+  overflow-x: hidden; }
+
+.body-contact {
+  overflow-y: visible;
+  overflow-x: hidden; }
 
 /*# sourceMappingURL=main.css.map */
