--- a/css/scss/layout/_body.scss
+++ b/css/scss/layout/_body.scss
@@ -1,18 +1,3 @@
-.body-contact {
-  overflow: hidden;
-  @media (max-width: 1000px) {
-    overflow-x: visible;
-    overflow-y: hidden;
-  }
-}
-.body-offer {
-  overflow: hidden;
-  @media (max-width: 1000px) {
-    overflow-x: visible;
-    overflow-y: hidden;
-  }
-}
-
 .body-index {
   overflow: hidden;
   @media (max-width: 1000px) {
@@ -20,3 +5,12 @@
   }
 }
 
+.body-offer {
+    overflow-y: visible;
+    overflow-x: hidden;
+  }
+
+.body-contact {
+    overflow-y: visible;
+    overflow-x: hidden;
+  }
